force-app/main/default/objects/Partner_Incentive__c/Partner_Incentive__c.object-meta.xml
<CustomObject>
    <label>Partner Incentive</label>
    <pluralLabel>Partner Incentives</pluralLabel>
    <nameField>
        <displayFormat>PIN-{00000000}</displayFormat>
        <label>Partner Incentive Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>