force-app/main/default/objects/Partner_Incentive__c/fields/Approved_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Amount__c</fullName>
    <description
  >The approver's decision, kept independent of Calculated_Amount__c so the original calculation stays visible (doc section 41.29).</description>
    <label>Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>