force-app/main/default/objects/Partner_Incentive__c/fields/Calculated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Amount__c</fullName>
    <description
  >Set once by IncentiveCommandService.calculate() and never overwritten by an approval override - see Approved_Amount__c.</description>
    <label>Calculated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>