force-app/main/default/objects/Partner_Incentive__c/fields/Calculation_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Snapshot__c</fullName>
    <description
  >JSON snapshot of the revenue/attribution/policy inputs used at calculation time (doc section 41.35).</description>
    <label>Calculation Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>