force-app/main/default/objects/Partner_Incentive__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Partner Incentives</relationshipLabel>
    <relationshipName>Partner_Incentives</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>