force-app/main/default/objects/Partner_Incentive__c/fields/Deal_Participant__c.field-meta.xml
<CustomField>
    <fullName>Deal_Participant__c</fullName>
    <label>Deal Participant</label>
    <type>Lookup</type>
    <referenceTo>Deal_Participant__c</referenceTo>
    <relationshipLabel>Partner Incentives</relationshipLabel>
    <relationshipName>Partner_Incentives5</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>