force-app/main/default/objects/Partner_Incentive__c/fields/Eligible_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Base_Amount__c</fullName>
    <label>Eligible Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>