force-app/main/default/objects/Partner_Incentive__c/fields/Incentive_Type__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Type__c</fullName>
    <label>Incentive Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Referral Fee</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
                <default>true</default>
                <label>Commission</label>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Accelerator</fullName>
            </value>
            <value>
                <fullName>SPIFF</fullName>
            </value>
            <value>
                <fullName>Implementation Incentive</fullName>
            </value>
            <value>
                <fullName>Renewal Incentive</fullName>
            </value>
            <value>
                <fullName>Growth Incentive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>