force-app/main/default/objects/Partner_Incentive__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Incentives</relationshipLabel>
    <relationshipName>Partner_Incentives4</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>