force-app/main/default/objects/Partner_Incentive__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <label>Protection</label>
    <type>Lookup</type>
    <referenceTo>Deal_Protection_Grant__c</referenceTo>
    <relationshipLabel>Partner Incentives</relationshipLabel>
    <relationshipName>Partner_Incentives6</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>