force-app/main/default/objects/Partner_Incentive__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <type>Lookup</type>
    <referenceTo>Deal_Revenue__c</referenceTo>
    <relationshipLabel>Partner Incentives</relationshipLabel>
    <relationshipName>Partner_Incentives2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>