force-app/main/default/objects/Partner_Incentive__c/fields/Revenue_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Attribution__c</fullName>
    <label>Revenue Attribution</label>
    <type>Lookup</type>
    <referenceTo>Deal_Revenue_Attribution__c</referenceTo>
    <relationshipLabel>Partner Incentives</relationshipLabel>
    <relationshipName>Partner_Incentives3</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>